--- a/.github/workflows/renovate-bot.yml
+++ b/.github/workflows/renovate-bot.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
     renovate:
-        runs-on: macos-latest
+        runs-on: windows-latest
 
         container:
             image: ghcr.io/renovatebot/renovate
